--- a/tpcc/postgresql.auto.conf
+++ b/tpcc/postgresql.auto.conf
@@ -1,10 +1,9 @@
 listen_addresses = '*'
 max_connections = 128
-shared_buffers = 16GB
+shared_buffers = 32GB
 maintenance_work_mem = 8GB
-effective_cache_size = 48GB
+effective_cache_size = 32GB
 work_mem = 64MB
-full_page_writes = off
 
 max_worker_processes = 10
 max_parallel_workers = 10
@@ -65,6 +64,7 @@ random_page_cost = 1.1
 default_statistics_target = 200
 
 # auto vacuum
+autovacuum = off
 vacuum_cost_delay = 10ms
 vacuum_cost_limit = 10000
 vacuum_defer_cleanup_age = 0
