add terraform tempalte

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ pgtpc.iml
 
 tpcc/sysbench
 tpch/tpch-dbgen/
+
+
+terraform/.terraform
+terraform/.terraform.tfstate
+terraform/.terraform.lock.hcl
+terraform/.terraform.tfstate.backup
